sfSandBoxCode/force-app/main/default/objects/Field_Report__c/Field_Report__c.object-meta.xml
<CustomObject>
    <description>Weekly Reports from FLOs compiled by Field Operations Staff</description>
    <label>Field Report</label>
    <nameField>
        <label>Field Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>