sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Accessibility_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Assessment__c</fullName>
    <description>For marketing assessment v2</description>
    <label>Accessibility Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>