sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Accessibility_during_rainy_season__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_during_rainy_season__c</fullName>
    <label>Accessibility during rainy season</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>