sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Are_there_nearby_walls_for_painting__c.field-meta.xml
<CustomField>
    <fullName>Are_there_nearby_walls_for_painting__c</fullName>
    <label>Are there nearby walls for painting?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>