sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Are_you_satisfied_with_the_FL_employees__c.field-meta.xml
<CustomField>
    <fullName>Are_you_satisfied_with_the_FL_employees__c</fullName>
    <description>Used for costumer satisfaction survey</description>
    <label>Are you satisfied with the FL employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>