sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Areas_of_improvement__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_improvement__c</fullName>
    <inlineHelpText>Please enter any areas of improvement</inlineHelpText>
    <label>Areas of improvement</label>
    <type>TextArea</type>
</CustomField>