sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Bottom_of_Corner_Piece_to_Bottomof_hinge__c.field-meta.xml
<CustomField>
    <fullName>Bottom_of_Corner_Piece_to_Bottomof_hinge__c</fullName>
    <label>Bottom of Corner Piece to Bottomof hinge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>