sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Calculated_Single_Usage_Fees__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Single_Usage_Fees__c</fullName>
    <formula>((Customers_Boys__c +  Customers_Girls__c )  *  Location__r.Single_Use_Fee_Children__c ) + (( Customers_Men__c +  Customers_Women__c ) *  Location__r.Single_Use_Fee_Adults__c )</formula>
    <label>Calculated Single Usage Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>