sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Cash_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Cash_at_Closing__c</fullName>
    <description>Cash at the End of the Assessment Period</description>
    <inlineHelpText>Whats the Total Cash at the End of this week?</inlineHelpText>
    <label>Cash at Closing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>