sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Catalogues__c.field-meta.xml
<CustomField>
    <fullName>Catalogues__c</fullName>
    <label>Catalogues</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>