sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Check_gap_between_door_and_wall__c.field-meta.xml
<CustomField>
    <fullName>Check_gap_between_door_and_wall__c</fullName>
    <label>Check gap between door and wall</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>