sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Check_if_floor_slab_is_level__c.field-meta.xml
<CustomField>
    <fullName>Check_if_floor_slab_is_level__c</fullName>
    <label>Check if floor slab is level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>