sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Check_if_walls_are_symetrical__c.field-meta.xml
<CustomField>
    <fullName>Check_if_walls_are_symetrical__c</fullName>
    <label>Check if walls are symetrical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>