sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Check_Site_alignment__c.field-meta.xml
<CustomField>
    <fullName>Check_Site_alignment__c</fullName>
    <label>Check Site alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>