sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Checklist_completed_by_install_team__c.field-meta.xml
<CustomField>
    <fullName>Checklist_completed_by_install_team__c</fullName>
    <label>Checklist completed by install team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>