sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Cleanliness_Score__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Score__c</fullName>
    <description>MLU Cleanliness Score</description>
    <label>Cleanliness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>