sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Competitor_Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Cleanliness__c</fullName>
    <label>Competitor Cleanliness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Clean</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Dirty</fullName>
            </value>
            <value>
                <fullName>Very Dirty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>