sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Competitor_Highest_Adult__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Highest_Adult__c</fullName>
    <label>Highest price for Adults</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>