sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Competitor_Lowest_Children__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Lowest_Children__c</fullName>
    <label>Lowest price for Children</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>