sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Competitor_Quality__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Quality__c</fullName>
    <label>Competitor Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>