sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Container_Full__c.field-meta.xml
<CustomField>
    <fullName>Container_Full__c</fullName>
    <label>Container Full?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>