sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Crew_had_all_proper_PPE__c.field-meta.xml
<CustomField>
    <fullName>Crew_had_all_proper_PPE__c</fullName>
    <label>Crew had all proper PPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>