sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Crew_Lead__c.field-meta.xml
<CustomField>
    <fullName>Crew_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Lead</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field Reports (Crew Lead)</relationshipLabel>
    <relationshipName>Field_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>