sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Crew_Member_1__c.field-meta.xml
<CustomField>
    <fullName>Crew_Member_1__c</fullName>
    <label>Crew Member 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>