sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Customer_Marketing_Updates__c.field-meta.xml
<CustomField>
    <fullName>Customer_Marketing_Updates__c</fullName>
    <inlineHelpText>Please enter any customer/marketing updates</inlineHelpText>
    <label>Customer/Marketing updates</label>
    <type>TextArea</type>
</CustomField>