sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Customer_welcomed_in_friendly_manner__c.field-meta.xml
<CustomField>
    <fullName>Customer_welcomed_in_friendly_manner__c</fullName>
    <label>Was customer welcomed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>