sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Customers_Boys__c.field-meta.xml
<CustomField>
    <fullName>Customers_Boys__c</fullName>
    <inlineHelpText>Please enter the number of customers who were boys on Day 1</inlineHelpText>
    <label>Customers - Boys</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>