sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Customers_Girls__c.field-meta.xml
<CustomField>
    <fullName>Customers_Girls__c</fullName>
    <inlineHelpText>Please enter the number of customers who were girls</inlineHelpText>
    <label>Customers - Girls</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>