sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Customers_Men__c.field-meta.xml
<CustomField>
    <fullName>Customers_Men__c</fullName>
    <inlineHelpText>Please enter the total number of customers who were men</inlineHelpText>
    <label>Customers - Men</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>