sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Customers_Women__c.field-meta.xml
<CustomField>
    <fullName>Customers_Women__c</fullName>
    <inlineHelpText>Please enter the total number of customers who were women</inlineHelpText>
    <label>Customers - Women</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>