sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Date_of_Quality_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Quality_Inspection__c</fullName>
    <description>Date of Quality Inspection</description>
    <label>Date of Quality Inspection</label>
    <type>Date</type>
</CustomField>