sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Dirt_Objects_on_the_Roof__c.field-meta.xml
<CustomField>
    <fullName>Dirt_Objects_on_the_Roof__c</fullName>
    <label>Dirt/Objects on the Roof?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>