sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Distance_to_nearest_toilet_m__c.field-meta.xml
<CustomField>
    <fullName>Distance_to_nearest_toilet_m__c</fullName>
    <label>Distance to nearest toilet (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>