sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Do_the_measurement_points_match_specs__c.field-meta.xml
<CustomField>
    <fullName>Do_the_measurement_points_match_specs__c</fullName>
    <label>Do the measurement points match specs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>