sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Employee_run_FLT__c.field-meta.xml
<CustomField>
    <fullName>Employee_run_FLT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee will run FLT?</label>
    <type>Checkbox</type>
</CustomField>