sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Employee_Score__c.field-meta.xml
<CustomField>
    <fullName>Employee_Score__c</fullName>
    <description>MLU Employee Score</description>
    <label>Employee Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>