sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the report</description>
    <inlineHelpText>Please enter the end date of the report</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>