sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/expand_your_business_by_purchasing_more__c.field-meta.xml
<CustomField>
    <fullName>expand_your_business_by_purchasing_more__c</fullName>
    <description>Used for customer satisfaction survey</description>
    <label>Expand your business with more FLTs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>