sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Expenses_Other_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Other_Expenses__c</fullName>
    <description>Total spent on other expenses for the reporting period.</description>
    <inlineHelpText>Please enter the total spent on other expenses for the reporting period.</inlineHelpText>
    <label>Other Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>