sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Expenses_Sawdust__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Sawdust__c</fullName>
    <description>Total spent on sawdust for the reporting period.</description>
    <inlineHelpText>Please enter the total spent on sawdust for the reporting period.</inlineHelpText>
    <label>Sawdust</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>