sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Expenses_Soap__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Soap__c</fullName>
    <description>Total spent on tissue for the reporting period.</description>
    <inlineHelpText>Please enter the total spent on tissue for the reporting period.</inlineHelpText>
    <label>Soap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>