sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Expenses_Wages__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Wages__c</fullName>
    <description>Total spent on wages for the reporting period.</description>
    <inlineHelpText>Please enter the total spent on wages for the reporting period.</inlineHelpText>
    <label>Wages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>