sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Feces_Urine_in_the_Chamber__c.field-meta.xml
<CustomField>
    <fullName>Feces_Urine_in_the_Chamber__c</fullName>
    <description>MLU</description>
    <label>Chamber free of feces/ urine?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>