sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <inlineHelpText>Please enter any feedback from FM</inlineHelpText>
    <label>Feedback</label>
    <type>TextArea</type>
</CustomField>