sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Female_Users__c.field-meta.xml
<CustomField>
    <fullName>Female_Users__c</fullName>
    <formula>( Customers_Girls__c + Customers_Women__c ) /  Total_Customers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Female Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>