sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Fiber_Sheet_nailed_to_roof__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Sheet_nailed_to_roof__c</fullName>
    <label>Fiber Sheet nailed to roof</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>