sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Flies_in_toilet__c.field-meta.xml
<CustomField>
    <fullName>Flies_in_toilet__c</fullName>
    <label>Toilet fly-free?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>