sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/FLO_Challenges__c.field-meta.xml
<CustomField>
    <fullName>FLO_Challenges__c</fullName>
    <description>FLO CHALLENGES</description>
    <inlineHelpText>Please enter any FLO challenges</inlineHelpText>
    <label>FLO Challenges</label>
    <type>TextArea</type>
</CustomField>