sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/FLO_Commitment_to_the_Brand__c.field-meta.xml
<CustomField>
    <fullName>FLO_Commitment_to_the_Brand__c</fullName>
    <label>FLO Commitment to the Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>