sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/FLO_Successes__c.field-meta.xml
<CustomField>
    <fullName>FLO_Successes__c</fullName>
    <description>FLO Successes</description>
    <inlineHelpText>Please enter any FLO Successes</inlineHelpText>
    <label>FLO Successes</label>
    <type>TextArea</type>
</CustomField>