sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/FLT_ok__c.field-meta.xml
<CustomField>
    <fullName>FLT_ok__c</fullName>
    <label>FLT ok?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>