sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Flyers__c.field-meta.xml
<CustomField>
    <fullName>Flyers__c</fullName>
    <label>Flyers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>