sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Foot_Traffic_Asessment__c.field-meta.xml
<CustomField>
    <fullName>Foot_Traffic_Asessment__c</fullName>
    <description>Foot traffic assessment for marketing assessment</description>
    <inlineHelpText>For Commercial-Open Market</inlineHelpText>
    <label>Foot Traffic Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>