sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Franchisee_agrees_to_wall_branding__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_agrees_to_wall_branding__c</fullName>
    <label>Franchisee agrees to wall branding?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>