sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Franchisee_is_respected__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_is_respected__c</fullName>
    <label>Franchisee is respected?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>